Enhance array handling and type normalization in JDBC compatibility layer; update tests for consistency